<resources>
    <string name="app_name">Example App</string>
    <string name="action_settings">Settings</string>
    <string name="action_close">Exit</string>
    <string name="form">Form</string>
    <string name="enter_two_numbers">Enter Two Numbers</string>
    <string name="calculator">Calculator</string>
    <string name="_min">-</string>
    <string name="c">C</string>
    <string name="back"><![CDATA[<-]]></string>
    <string name="div">/</string>
    <string name="dot">.</string>
    <string name="minus">-/</string>
    <string name="_0">0</string>
    <string name="res">=</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="plus">+</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="mul">x</string>
    <string name="count_down">Count Down</string>
    <string name="input_exmp">Input Exmp</string>
    <string name="btnNama">Tampilkan</string>
    <string name="txtNama">Nama Anda</string>
    <string name="isi_teks">Isi Teks</string>
    <string name="login">Login</string>
    <string name="login_text">LOGIN</string>
</resources>
